优化邀请注册 新增邀请买卡 优惠券回归

--- a/js/pages/card/show.html
+++ b/js/pages/card/show.html
@@ -52,7 +52,7 @@
         商务合作请发送邮件至：ben@bensue.com</div>
     </div>
     <div style="position: absolute;bottom: 0;display: table;width: 100vw;" :if="@data.packageStatus==1">
-        <button class="nav-bottom-btn-left" type="button" onclick="javascript:location.href='index.html'">暂不开通</button>
-        <button class="nav-bottom-btn-right" type="button" onclick="javascript:location.href='promotion-apply.html'">现在开通本宿推广奖励计划</button>
+        <button style="background: #000;color: #fff;font-size: 17px;font-weight: bolder;width: 28%;border: none;border-radius: 0;height: 50px;" type="button" onclick="javascript:location.href='index.html'">暂不开通</button>
+        <button style="background: #baa071;color: #fff;font-size: 17px;font-weight: bolder;width: 72%;border: none;border-radius: 0;height: 50px;" type="button" onclick="javascript:location.href='promotion-apply.html'">现在开通本宿推广奖励计划</button>
     </div>
 </div>
