--- a/js/pages/discover/discover.html
+++ b/js/pages/discover/discover.html
@@ -63,6 +63,13 @@
         </div>
         <img src="../img/icon/right-arrow.svg" class="arrow">
     </div>
+    <div class="row" onclick="javascript:location.href='vip-invite.html';">
+        <img src="../img/discover/friends.png" class="item-img">
+        <div class="item-text">
+            邀请好友开通本宿VIP会员
+        </div>
+        <img src="../img/icon/right-arrow.svg" class="arrow">
+    </div>
 </section>
 
 <section>
