--- a/js/pages/invite/vip-invite.html
+++ b/js/pages/invite/vip-invite.html
@@ -5,12 +5,9 @@
             <div>
                 邀请好友成为本宿VIP会员
             </div>
-            <div>
-                获得邀请奖励
-            </div>
         </div>
     </div>
-    <div style="height: 240px;background: url('img/generalize.jpg');background-size: cover;background-position: center">
+    <div style="height: 35vh;background: url('img/generalize.jpg');background-size: cover;background-position: center">
     </div>
     <div class="bs-text-large bs-text-gold" ms-on-tap="clickLog" style="margin: 15px 10px;text-align: right;">邀请记录
     </div>
