--- a/js/pages/wallet/coupon.html
+++ b/js/pages/wallet/coupon.html
@@ -79,6 +79,6 @@
         <a id="rulePop" class="bs-text-gold" ms-click="openRule" style="display: block;">使用说明</a>
     </div>
 
-    <div class="banner bs-text-white bs-bg-black bs-text-large" ms-click="goInvite">获得体验基金</div>
+    <div class="banner bs-text-white bs-bg-black bs-text-large" ms-click="goInvite">获得优惠券</div>
 </div>
 
