--- a/js/util/pop.html
+++ b/js/util/pop.html
@@ -82,13 +82,13 @@
                 <img src="../img/wallet.svg" class="grid-icon" />
                 <div class="bs-text-smaller bs-text-black">钱包</div>
             </div>
-            <!-- <div class="center-nav-item" ms-on-tap="clickA(4)" ms-visible="!isManage">
+            <div class="center-nav-item" ms-on-tap="clickA(4)" ms-visible="!isManage">
                 <a href="javascript:void(0)">
                     <img src="../img/icon/fund.png" class="grid-icon" />
-                    <div class="bs-text-smaller bs-text-black">体验基金</div>
+                    <div class="bs-text-smaller bs-text-black">优惠券</div>
                 </a>
-            </div> -->
-            <!-- <div class="center-nav-item" ms-on-tap="clickA(4)" ms-visible="!isManage">
+            </div>
+            <!-- <div class="center-nav-item" ms-on-tap="clickA(11)" ms-visible="!isManage">
                 <a href="javascript:void(0)">
                     <img src="../img/icon/promotion.svg" class="grid-icon" />
                     <div class="bs-text-smaller bs-text-black">推广</div>
