--- a/js/pages/invite/user-invite-rule.html
+++ b/js/pages/invite/user-invite-rule.html
@@ -16,24 +16,21 @@
 }
 </style>
 <div class="content-rule bs-text-black">
-    <div class="mui-content-padded" style="padding: 1rem;">
-        <h4>推荐条款细则：</h4>
+    <div class="mui-content-padded">
+        <h4>邀请条款细则：</h4>
         <ol>
             <li>
-                任何人都可以邀请好友
-                <p>任何用户登录本宿后都可以邀请朋友免费赚取约会基金， 不需要在本宿进行消费</p>
+                所有本宿用户登录后，可在邀请好友成为本宿用户后，获得本宿专享优惠券，仅在本宿进行消费。
             </li>
             <li>
-                获得和兑换约会优惠
-                <p>每次消费后，会累积约会基金，可用于以后的消费，或 者用于兑换优惠卷。</p>
+                可对多个好友进行邀请，当好友成为本宿用户后，双方都可获得本宿专享优惠券，仅在本宿进行消费。
             </li>
-            <li>合格预订</li>
-            <li>多个邀请</li>
-            <li>时间性
-                <p>我们有权暂停您的账户并删除邀请以确保不出现滥用 该服务。</p>
-                <p>只有完成的消费，才会有约会基金。
-                该活动只在有限的时间内有效，后续会进行调整。</p>
-                <p>在进行多个好友邀请时，在好友通过该链接进入本宿并登陆后，你将会获得约会基金。</p>
+            <li>优惠券请在有效期内使用。</li>
+            <li>不同的优惠券有不同的使用限制，请认真查看优惠券信息。</li>
+            <li>当您以不正当方式获得本宿优惠券时，本宿有权暂停您的账户并删除邀请及对应的优惠券。
+            </li>
+            <li>
+                本活动解释权归本宿酒店所有。
             </li>
         </ol>
     </div>
