--- a/js/pages/invite/user-invite.html
+++ b/js/pages/invite/user-invite.html
@@ -1,4 +1,12 @@
 <div ms-controller="invite">
+  <div class="mask-fullscreen bs-text-white" ms-if="isShowMask" ms-click="maskToggle" style="padding-right: 3vw;">
+      <img src="../img/icon/arrow_top.gif" style="width: 30px;">
+      <div class="bs-text-larger" style="position: relative;padding-top: 3vh;line-height: 25px;">
+          <div>
+              邀请好友注册本宿
+          </div>
+      </div>
+  </div>
   <div style="height: 240px;background: url('img/invite_index.jpg');background-size: cover;background-position: center">
       <!-- <div style="text-align:center;position: absolute;top: 3rem;left: 2rem;color: white;">
           <h4 style="text-align: center;">赠人玫瑰，手有余香</h4>
@@ -7,7 +15,7 @@
   </div>
   <br />
   <div style="text-align:center">
-      <p>您的专属邀请码(长按可复制)</p>
+      <p>您的专属邀请码</p>
          <input type="text" readonly="true" ms-duplex="code" style="font-size: 28px;text-align: center;border: 0px;background: transparent;">
       <br />
       <!-- <button id="sharePop" type="button" ms-on-tap="clickShare" class="mui-btn mui-btn-danger mui-btn-block" style="padding: 5px 20px;width: 70%;margin: 0 auto;">分享</button> -->
