--- a/js/pages/invite/vip-invite-log.html
+++ b/js/pages/invite/vip-invite-log.html
@@ -1,30 +1,24 @@
-<div ms-controller="oldInvite" class="bs-bg-white bs-text-black" style="padding: 15px;height: 80vh;overflow-y: auto;">
+<div ms-controller="oldInvite" class="bs-bg-white bs-text-black" style="padding: 20px;height: 80vh;overflow-y: auto;">
     <div ms-if="count===0" style="text-align:center" class="bs-text-large">
-        您还没有邀请小伙伴，赶紧行动吧
+        您还未成功邀请小伙伴成为VIP会员，赶紧行动吧
     </div>
-    <div class="bs-text-large" ms-if="count!==0" style="margin-bottom: 15px; display: flex;justify-content: space-between;">
-      <div>已邀请 <span class="bs-text-red">{{count}}</span> 名好友</div>
-      <div>累计获得 <span class="bs-text-red">{{awardAmount}}</span> 元</div>
+    <div ms-if="count!==0" style="margin-bottom: 30px;">
+      <div class="bs-text-x-larger bs-text-bolder" style="margin-bottom: 12px;">您已邀请{{count}}名好友</div>
+      <div class="bs-text-51 bs-text-smaller">累计获得 <span class="bs-text-red">{{awardAmount}}</span> 元现金回馈</div>
     </div>
-    <div class="bs-text-small" ms-repeat="list" ms-if="count!==0" style="margin: 10px 0;display: flex;justify-content: space-between;padding: 7px 0;border-bottom: 1px solid #ddd;">
-        <div>
-          <img ms-attr-src="urlAPINet+el.invitee.headUrl" alt="" style="border-radius: 50%;width: 48px;">
-        </div>
-        <div class="flex-column-around" style="flex: 1 1 auto; text-align: left;padding-left: 15px;">
+    <div class="bs-text-smaller bs-text-51" ms-repeat="list" ms-if="count!==0" style="display: flex;justify-content: space-between;align-items: center;border-bottom: 1px solid #ddd;height: 54px;">
+        <img ms-attr-src="urlAPINet+el.invitee.headUrl" alt="" style="border-radius: 50%;width: 35px;">
+        <div class="flex-column-around" style="flex: 1 1 auto; text-align: left;padding-left: 15px;margin-top: 5px;">
           <div>
             {{el.invitee.nickname||el.invitee.name}}
              购买{{el.name}}
           </div>
-          <div>
+          <div class="bs-text-153">
             {{el.payTime.slice(0,10)}}
           </div>
         </div>
-        <div class="flex-column-around">
-          <div>
-            + <span class="bs-text-red">{{el.kickback}}</span> 元
-          </div>
-          <div>&nbsp;
-          </div>
+        <div>
+            <span class="bs-text-green">+</span> {{el.kickback}} 元
         </div>
     </div>
 </div>
