发现页面的邀请VIP icon 更换

--- a/js/pages/invite/inviteToVip.html
+++ b/js/pages/invite/inviteToVip.html
@@ -35,7 +35,7 @@
     display: none;
   }
 </style>
-<div class="ms-controller" ms-controller="invite" style="display: flex;flex-direction: column; justify-content: start;background-image:url(../img/inviteToVipBG.jpg);background-size: cover;background-repeat: no-repeat; height: 100vh;">
+<div ms-controller="invite" style="display: flex;flex-direction: column; justify-content: start;background-image:url(../img/inviteToVipBG.jpg);background-size: cover;background-repeat: no-repeat; height: 100vh;">
   <img src="img/inviteToVipPlane.png" class="planeStatic" alt="">
     <div class="planeBox">
       <img src="img/inviteToVipPlane.png" class="plane" alt="">
@@ -55,5 +55,5 @@
       <div>我最近在本宿办了张VIP会员卡，每月都能领奖金，住酒店打折还送小礼品，你要不要去看看？
       </div>
     </div>
-    <div class="bs-text-white bs-text-bolder" style="position: absolute; bottom: 15vh;left: 50vw;margin-left:-60px; background-color: #e93b39;font-size: 18px;width: 120px;line-height: 44px;text-align: center;" ms-click="goVip">去看看</div>
+    <div class="bs-text-white bs-text-bolder" style="margin:0px auto; background-color: #e93b39;font-size: 18px;width: 120px;line-height: 44px;text-align: center;" ms-click="goVip">去看看</div>
 </div>
