--- a/js/pages/discover/discover.html
+++ b/js/pages/discover/discover.html
@@ -64,7 +64,7 @@
         <img src="../img/icon/right-arrow.svg" class="arrow">
     </div>
     <div class="row" onclick="javascript:location.href='vip-invite.html';">
-        <img src="../img/discover/friends.png" class="item-img">
+        <img src="../img/discover/vip-invite.svg" class="item-img">
         <div class="item-text">
             邀请好友开通本宿VIP会员
         </div>
