--- a/js/pages/invite/vip-invite.html
+++ b/js/pages/invite/vip-invite.html
@@ -1,4 +1,4 @@
-<div ms-controller="invite" class="bs-bg-white" style="height: 100vh;">
+<div ms-controller="invite" class="bs-bg-white" style="height: 100%;">
     <div class="mask-fullscreen bs-text-white" ms-if="isShowMask" ms-click="maskToggle" style="padding-right: 3vw;">
         <img src="../img/icon/arrow_top.gif" style="width: 30px;">
         <div class="bs-text-larger" style="position: relative;padding-top: 3vh;line-height: 25px;">
@@ -16,10 +16,10 @@
         <div class="bs-text-x-larger bs-text-bolder" style="    line-height: 32px;">
             邀请好友开通本宿VIP会员，您将获得本宿的现金回馈：
         </div>
-        <div class="bs-text-large" style="margin-top: 30px;line-height: 28px;">
-            好友开通银卡会员，您将获得<span class="bs-text-red" style="display:inline-block;width: 35px;font-size: 18px;text-align: center;">{{sAward}}</span>元；
-            <br>好友开通金卡会员，您将获得<span class="bs-text-red" style="display:inline-block;width: 35px;font-size: 18px;text-align: center;">{{gAward}}</span>元；
-            <br>好友开通黑卡会员，您将获得<span class="bs-text-red" style="display:inline-block;width: 35px;font-size: 18px;text-align: center;">{{bAward}}</span>元。
+        <div class="bs-text-large" style="margin: 30px 0 50px 0;line-height: 28px;">
+            好友开通银卡会员，您将获得<span class="bs-text-red" style="display:inline-block;width: 37px;font-size: 18px;text-align: center;">{{sAward}}</span>元；
+            <br>好友开通金卡会员，您将获得<span class="bs-text-red" style="display:inline-block;width: 37px;font-size: 18px;text-align: center;">{{gAward}}</span>元；
+            <br>好友开通黑卡会员，您将获得<span class="bs-text-red" style="display:inline-block;width: 37px;font-size: 18px;text-align: center;">{{bAward}}</span>元。
         </div>
     </div>
     <div ms-click="maskToggle" class="bs-bg-black bs-text-white" style="font-size: 18px;position: fixed;bottom: 0;line-height: 40px;width: 100%;text-align: center;">邀请好友</div>
