公益学生编辑、基金编辑页面样式修改、加限制

--- a/js/pages/cms/editFund.html
+++ b/js/pages/cms/editFund.html
@@ -1,49 +1,98 @@
 <style>
 .user {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 10px 0;
+}
+
+.student {
+    width: 48vw !important; 
+    height: 30px !important; 
+    padding: 8px !important; 
+    /*border-radius: 15px !important;*/ 
+    font-size: 14px;
+    text-align: center;
+    color: #bbb;
+    background-color: #f7f7f7 !important; 
+}
+
+.student:focus {
+    color: black;
+    background-color: white !important;
+    border: 2px solid #a4e6ff;
 }
 
 .left {
     width: 20vw;
 }
+
+.intro {
+    width: 82vw; 
+    padding: 5px; 
+    margin: 7px 28px; 
+    text-align: left; 
+    text-indent: 1em; 
+    font-size: 16px;
+    line-height: 30px;
+    overflow-y: auto;
+    color: #999;
+    background-color: #efeff4;
+}
+
+.intro:focus {
+    color: black;
+    background-color: white;
+    border: 1px solid #a0b3d6;
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1), 0 0 8px rgba(82, 168, 236, 0.6);
+}
+
+.brief {
+    height: 38vh; 
+    width: 82vw; 
+    padding: 5px; 
+    margin: 7px 28px; 
+    text-align: left; 
+    text-indent: 1em; 
+    font-size: 16px;
+    line-height: 30px;
+    overflow-y: auto;
+    color: #999;
+    background-color: #efeff4;
+}
+
+.brief:focus {
+    color: black;
+    background-color: white;
+    border: 1px solid #a0b3d6;
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1), 0 0 8px rgba(82, 168, 236, 0.6);
+}
 </style>
 <div class="bs-text-smaller cms" ms-controller="editFund">
-    <div class="mui-text-center" style="margin-top: 2vh;">
-        <div class="circle" style="width: 104px;height: 104px;margin: 0px auto;border: 1px solid #baa074;">
+    <div class="mui-text-center" style="display: flex; justify-content: flex-start; margin: 27px 28px;">
+        <div class="circle" style="width: 104px;height: 104px;margin-right: 25px;border: 1px solid #baa074;">
             <div class="circle" style="margin: 0 auto;width: 96px;height: 96px;background-size: cover;background-position: center;position:relative;top: 3px;" ms-css-background-image='url({{headImg}})' ms-on-tap="changeImg">
                 <img src="../img/edit-small.png" style="position: absolute;background: #fff;border-radius: 50%;bottom: 2px;left: 72px;width: 18px;" />
             </div>
         </div>
-    </div>
-    <div class="user" style="margin-top: 5vh;">
-        <div class="left" class="left">中文名称</div>
-        <div>
-            <input type="text" ms-duplex="name" data-duplex-changed="changed" style="width: 43vw; height: 30px; padding: 8px; border-radius: 8px;" maxlength="20" />
+        <div class="user">
+            <div>
+                <input class="student" style="margin-bottom: 0;" maxlength="20" type="text" ms-duplex="name" placeholder="中文名称" data-duplex-changed="changed"/>
+            </div>
+            <div>
+                <input class="student" style="margin-bottom: 0;" maxlength="100" type="text" ms-duplex="enName" placeholder="英文名称" data-duplex-changed="changed"/>
+            </div>
         </div>
     </div>
-    <div class="user" style="margin-top: 2vh;">
-        <div class="left">英文名称</div>
-        <div>
-            <input type="text" ms-duplex="enName" data-duplex-changed="changed" style="width: 43vw; height: 30px; padding: 8px; border-radius: 8px;" maxlength="20" />
-        </div>
+    <div style="text-align: center;">
+        <textarea class="intro" rows="2" maxlength="50" ms-duplex="introduction" placeholder="一句话介绍" data-duplex-changed="changed">
+        </textarea>
     </div>
-    <div class="user" style="margin-top: 2vh;">
-        <div class="left">一句话介绍</div>
-        <div>
-            <input type="text" ms-duplex="introduction" data-duplex-changed="changed" style="width: 43vw; height: 30px; padding: 8px; border-radius: 8px;" maxlength="20" />
-        </div>
+    <div style="text-align: center;">
+        <textarea class="brief" maxlength="255" ms-duplex="brief" placeholder="简介" data-duplex-changed="changed">
+        </textarea>
     </div>
-    <div class="user" style="margin-top: 2vh;">
-        <div class="left" style="padding-top: 5px;">简介</div>
-        <div>
-            <textarea ms-duplex="brief" style="height: 26vh; width: 43vw; padding: 5px; border-radius: 8px; text-align: left; text-indent: 1em; font-size: 12px;" placeholder="简介" maxlength="255">
-            </textarea>
-        </div>
-    </div>
-    <br>
-    <br>
-    <div class="footer" style="position: fixed; bottom: 0;">
+    <div class="footer" style="position: absolute; bottom: 0;">
         <button style="width: 100vw; height: 50px;" ms-click="save()">保存</button>
     </div>
 </div>
