--- a/js/pages/cms/favoreeList.html
+++ b/js/pages/cms/favoreeList.html
@@ -12,8 +12,9 @@
                 <img ms-attr-src="urlAPINet + el.imgUrl" alt="" style="border-radius: 50%;width: 44px;">
                 <div class="flex1" style="padding-left: 15px;padding-right: 5px;">
                     <span class="bs-text-normal">{{el.name}}</span> {{el.education}}{{el.grade}}
-                    <br>
-                    {{el.reason}}
+                    <div style="margin-top: 12px;width: 62vw;white-space: nowrap;text-overflow: ellipsis;overflow: hidden;">
+                        {{el.reason}}
+                    </div>
                 </div>
                 <div>
                     <img src="../img/icon/edit_red.png" alt="" style="width: 12px;position: relative;top: -10px;">
