--- a/js/pages/commonweal/record.html
+++ b/js/pages/commonweal/record.html
@@ -1,21 +1,21 @@
-<div class="ms-controller" ms-controller="record" style="height: 100vh; background-color: white; padding: 30px 20px;">
-    <div :if="@join">
+<div ms-controller="record" style="height: 100vh; background-color: white; padding: 30px 20px;">
+    <div ms-if="join">
         <div style="display: flex;justify-content: space-between;">
             <div class="bs-text-larger bs-text-normal">共累计捐赠
-                <span class="intro-text-red">{{@amount}}</span> 元
+                <span class="intro-text-red">{{amount}}</span> 元
             </div>
             <div class="bs-text-larger bs-text-normal">本宿捐赠
-                <span class="intro-text-red">{{@bensueAmount}}</span> 元
+                <span class="intro-text-red">{{bensueAmount}}</span> 元
             </div>
         </div>
         <div id="pullrefresh" class="mui-scroll-wrapper" style="top: 15vh;left: 6vw;width: 90vw;">
             <div class="mui-scroll" style="padding-right: 10px;">
-                <div :if="@amount==0" class="bs-text-smaller fr-flex" style="border-bottom: 1px solid #ddd; display: flex; justify-content: space-between; padding: 10px 0;">
+                <div ms-if="amount==0" class="bs-text-smaller fr-flex" style="border-bottom: 1px solid #ddd; display: flex; justify-content: space-between; padding: 10px 0;">
                     <div class="today-list-item">
                         暂无捐赠记录
                     </div>
                 </div>
-                <div class="bs-text-smaller fr-flex" style="border-bottom: 1px solid #ddd; display: flex; justify-content: space-between; padding: 10px 0;" :for="el in @list">
+                <div class="bs-text-smaller fr-flex" style="border-bottom: 1px solid #ddd; display: flex; justify-content: space-between; padding: 10px 0;" ms-repeat="list">
                     <div class="today-list-item">
                         公益捐赠
                         <br>
@@ -30,7 +30,7 @@
             </div>
         </div>
     </div>
-    <div :if="!@join" style="text-align: center; margin-top: 30vh; line-height: 32px;">
+    <div ms-if="!join" style="text-align: center; margin-top: 30vh; line-height: 32px;">
         尊敬的用户您好！<br>
         您暂无捐助记录，若您想行善，<br>
         本宿公益将成为你最好的选择。
