--- a/js/pages/commonweal/commonweal-pop.html
+++ b/js/pages/commonweal/commonweal-pop.html
@@ -12,12 +12,12 @@
         <div>帮助他人改变命运</div>
         <div style="margin-top: 3px;">你有权让自己独一无二</div>
         <div class="card-buy-circle">
-            <div style="padding-top: 20vw;" :if="!@join">
-                <div class="bs-text-gold" style="font-size: 16px;">{{@amount}}元/月</div>
+            <div style="padding-top: 20vw;" ms-if="!join">
+                <div class="bs-text-gold" style="font-size: 16px;">{{amount}}元</div>
                 <div class="bs-text-normal">每月捐赠</div>
             </div>
-            <div style="padding-top: 20vw;" :if="@join">
-                <div class="bs-text-gold" style="font-size: 16px;">{{@amount}}元</div>
+            <div style="padding-top: 20vw;" ms-if="join">
+                <div class="bs-text-gold" style="font-size: 16px;">{{amount}}元</div>
                 <div class="bs-text-normal">您已捐赠</div>
             </div>
         </div>
@@ -25,8 +25,8 @@
             您的公益捐赠，每月将以您个人的名义自动划拨到响应公益账户。本宿公益负责对进入我们的平台的公益组织进行审核，但不干涉具体运营，如有任何疑问，请您致电该组织。
         </div>
     </div>
-    <div>
-        <button class="button" :click="@close()">取消</button>
-        <button class="button" :click="@go()">确定</button>
+    <div style="display: flex; margin-top: 20px;">
+        <button class="button" ms-click="close()">取消</button>
+        <button class="button" ms-click="go()">确定</button>
     </div>
 </div>
