修改下公益学生页面bug，动态圆形页面

--- a/js/pages/commonweal/detail.html
+++ b/js/pages/commonweal/detail.html
@@ -18,10 +18,10 @@
             <span class="detail-left-down" style="color: #baa071;">位孩子完成学业</span>
         </div>
         <div class="detail-right-tab bs-text-normal" ms-on-tap="getButton(2)">
-            <span class="bs-text-smaller detail-right-up">已捐出</span>
+            <span class="bs-text-smaller detail-right-up" style="color: #999;">已捐出</span>
             <br>
             <span class="intro-text-red">{{moneySum}}</span>
-            <span class="detail-right-down">元善款</span>
+            <span class="detail-right-down" style="color: #999;">元善款</span>
         </div>
     </div>
     <div id="pullrefresh" class="mui-scroll-wrapper bs-text-smaller" style="top: 260px; background-color: white;">
